# phaseFieldFoam

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cmake.yml  sphinx_docs_to_gh_pages.yaml  wmake.yml
_sources/: index.rst.txt
_sources/src/: fvModels.rst.txt
_sources/theory/: theory.rst.txt
_sources/tutorials/: phase.rst.txt
_static/: documentation_options.js
applications/solvers/multiphase/icoPhaseFieldFoam/: createFields.H  dTEqn.H  fiEqn.H  icoPhaseFieldFoam.C
applications/solvers/multiphase/icoPhaseFieldFoam/Make/: files
applications/solvers/multiphase/phaseFieldFoam/: createFields.H  createMesh.H  dTEqn.H  fiEqn.H  freeMemory.H  phaseFieldFoam.C
applications/solvers/multiphase/phaseFieldFoam/Make/: files  options
code/: code.html
docs/: Doxyfile
docs/source/: conf.py  index.rst
docs/source/code/: code.rst
docs/source/images/: phase_call_graph.dot
docs/source/solver/: phaseFieldFoam.rst
docs/source/src/: index.rst
docs/source/tutorials/: index.rst  modules.rst  phase.rst
etc/: bashrc
etc/config.sh/: settings
run/phase/: Allrun  generate_pvd.py  plot.py  qsub_OF10_submission.sh
run/phase/0/: dT  fi.orig
run/phase/constant/: physicalProperties
run/phase/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
solver/: phaseFieldFoam.html
src/: fvModels.html  index.html
src/OpenFOAM/: sNvccOpt_wmake_libso.sh  wmake_Gcc.sh  wmake_Nvcpp.sh
src/OpenFOAM/Make/: files  options
src/OpenFOAM/containers/Lists/CompactListList/: CompactListListIO.C
src/OpenFOAM/fields/Fields/scalarField/: scalarField.C
src/OpenFOAM/matrices/lduMatrix/solvers/GAMG/GAMGAgglomerations/GAMGAgglomeration/: GAMGAgglomeration.C
src/OpenFOAM/meshes/polyMesh/polyPatches/basic/coupled/: coupledPolyPatch.H
src/OpenFOAM/primitives/Scalar/: Scalar.H
src/OpenFOAM/primitives/functions/Function1/None/: None.C
src/OpenFOAM/primitives/functions/Function1/Ramp/: Ramp.C
src/OpenFOAM/primitives/functions/Function1/evaluate/: Function1Evaluate.C
src/OpenFOAM/primitives/functions/Function1/quadraticRamp/: quadraticRamp.H
src/cudaTest/: hello.H  hello.cu
src/cudaTest/Make/: files  options
src/finiteVolume/: sNvccOpt_wmake_libso.sh  wmake_Gcc.sh  wmake_Nvcpp.sh
src/finiteVolume/Make/: files  options
src/finiteVolume/finiteVolume/snGradSchemes/limitedSnGrad/: limitedSnGrad.C  limitedSnGrad.H
src/finiteVolume/fvMatrices/fvMatrix/: fvMatrixSolve.C
src/finiteVolume/fvMesh/fvMeshTopoChangers/none/: fvMeshTopoChangersNone.C
src/finiteVolume/interpolation/surfaceInterpolation/schemes/CoBlended/: CoBlended.C
src/fvModels/Make/: files  options
src/fvModels/derived/anisotropySource/: anisotropySource.C  anisotropySource.H  anisotropySource.cu
tests/: Allclean  Alltest  test_phaseFieldFoam.py
tests/cudaTest/: helloCuda.cu
tests/cudaTest/Make/: files  options
tests/fvModels/: createFields.H  test_anisotropySource.C
tests/fvModels/Make/: files  options
tests/fvModels/case/: .gitignore  Allrun
tests/fvModels/case/constant/: fvModels  physicalProperties
tests/fvModels/case/system/: controlDict  fvSolution
theory/: theory.html
tutorials/: .gitignore  index.html  modules.html  phase.html
tutorials/multiphase/phaseFieldFoam/icoPhase/: Allrun  Allrun.pre  bede-prof.sh  bede.sh  generate_pvd.py  plot.py  qsub_OF10_submission.sh  slurm_submission
tutorials/multiphase/phaseFieldFoam/icoPhase/0/: U  dT  fi.orig  p
tutorials/multiphase/phaseFieldFoam/icoPhase/constant/: physicalProperties
tutorials/multiphase/phaseFieldFoam/icoPhase/system/: blockMeshDict  controlDict  fvSolution  setFieldsDict
tutorials/multiphase/phaseFieldFoam/icoPhase/test/: centreline.xy
tutorials/multiphase/phaseFieldFoam/phase/: Allclean  Allpost  Allrun  bede-prof-cpu.sh  bede-prof.sh  bede.sh  bind.sh  generate_pvd.py  plot.py  qsub_OF10_Nvcpp_submission.sh  qsub_OF10_submission.sh  slurm_submission
tutorials/multiphase/phaseFieldFoam/phase/0/: .gitignore  dT  fi.orig
tutorials/multiphase/phaseFieldFoam/phase/constant/: fvModels  physicalProperties
tutorials/multiphase/phaseFieldFoam/phase/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  setFieldsDict
tutorials/multiphase/phaseFieldFoam/phase/test/: CMakeLists.txt  centreline.xy  test_phasefield.cpp
wmake/rules/General/: CGAL
wmake/rules/linux64Clang/: c++
wmake/rules/linux64Gcc/: c++  cu  cuDebug  cuProf  general
wmake/rules/linux64Icx/: c++
wmake/rules/linux64Nvcc/: c  c++  c++Opt  cDebug  flex++  mplibSYSTEMOPENMPI  version
wmake/rules/linux64Nvcpp/: c  c++  c++Debug  c++Opt  c++Prof  general  mplibSYSTEMOPENMPI
wmake/rules/linuxARM7Gcc/: c++
wmake/rules/linuxClang/: c++
wmake/rules/linuxGcc/: c++
wmake/rules/linuxIcx/: c++
wmake/rules/linuxPPC64Gcc/: c++
wmake/rules/linuxPPC64leGcc/: c++  cu  cuOpt  cuProf  general
wmake/rules/linuxPPC64leNvcc/: c  c++  cDebug  cu  cuDebug  cuOpt  cuProf  flex++  general  mplibSYSTEMOPENMPI  version
wmake/rules/linuxPPC64leNvcpp/: c  c++  c++Debug  c++Opt  cDebug  cProf  general  mplibSYSTEMOPENMPI
